# graphics-engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Graphics Engine.sln  Graphics Engine.vcxproj  Graphics Engine.vcxproj.filters  Log.cpp  Log.h  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  TODO.md  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  build.bat  build.sh  default.frag  default.vert  glad.c  main.cpp  phong.frag
Libraries/include/glad/: glad.h
